Fix T86050: use material count from correct data block

See comment in code for more details.

Differential Revision: https://developer.blender.org/D10615